--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
-language: node_js
-node_js:
-- '10'
 deploy:
   provider: s3
   access_key_id: AKIARRT74VEDFMGTFYSA
@@ -9,5 +6,6 @@ deploy:
   bucket: vanbujm-aws-terraform-bucket
   acl: 'public_read'
   skip_cleanup: true
+  local_dir: public
   on:
     repo: vanbujm/aws-terraform
